// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SliderControl Right slider control render unchanged 1`] = `
<div>
  <button
    class="ControlContainer-sc-ms3p6h-0 RightControlButton-sc-ms3p6h-2 CYGWr fehyoi"
    data-testid="slider-control"
  >
    <div
      class="ControlIconContainer-sc-ms3p6h-3 eAXRGx"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-chevron-right "
        color="#f3f1f1"
        data-icon="chevron-right"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 480c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L242.8 256L73.38 86.63c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l192 192c12.5 12.5 12.5 32.75 0 45.25l-192 192C112.4 476.9 104.2 480 96 480z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`SliderControl left slider control render unchanged 1`] = `
<div>
  <button
    class="ControlContainer-sc-ms3p6h-0 LeftControlButton-sc-ms3p6h-1 CYGWr kbLFOO"
    data-testid="slider-control"
  >
    <div
      class="ControlIconContainer-sc-ms3p6h-3 eAXRGx"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-chevron-left "
        color="#f3f1f1"
        data-icon="chevron-left"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M224 480c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25l192-192c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l169.4 169.4c12.5 12.5 12.5 32.75 0 45.25C240.4 476.9 232.2 480 224 480z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</div>
`;
